--- a/build.xml
+++ b/build.xml
@@ -143,7 +143,7 @@
              includes="${codesparks-core.package.path}/**/*"
         >
             <zipgroupfileset dir="${lib.dir}"
-                             includes="commons-io-2.11.0.jar"
+                             includes=""
                              excludes="**/*javadoc.jar,**/*sources.jar"/>
             <fileset dir="${resources.dir}"
                      includes="codesparks-strings.properties,
